Remove top margin of first <p> in fieldset

--- a/qformat.html
+++ b/qformat.html
@@ -60,6 +60,10 @@
                 padding: 20px;
             }
 
+            fieldset > p {
+                margin-top: 0;
+            }
+
             legend {
                 font-weight: bold;
             }
