Remove top margin of first element in fieldset

--- a/qformat.html
+++ b/qformat.html
@@ -60,7 +60,7 @@
                 padding: 20px;
             }
 
-            fieldset > p {
+            legend + * {
                 margin-top: 0;
             }
 
