Tweak table border style

--- a/qformat.html
+++ b/qformat.html
@@ -99,9 +99,12 @@
             input[type=text], input[type=number], select, textarea {
                 width: 100%;
                 padding: 12px;
+                resize: vertical;
+            }
+
+            input[type=text], input[type=number], select, textarea, table {
                 border: 1px solid #ccc;
                 border-radius: 4px;
-                resize: vertical;
             }
 
             /* Style the label to display next to the inputs */
@@ -164,7 +167,6 @@
             table {
                 margin: 0 auto;
                 border-collapse: collapse;
-                border-radius: 4px;
                 overflow: hidden;
                 width: 100%;
             }
