Fix responsive table border

--- a/qformat.html
+++ b/qformat.html
@@ -166,7 +166,8 @@
 
             table {
                 margin: 0 auto;
-                border-collapse: collapse;
+                border-collapse: separate;
+                border-spacing: 0;
                 overflow: hidden;
                 width: 100%;
             }
