--- a/qformat.html
+++ b/qformat.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="Q-format Converter &amp; Calculator" />
         <meta property="og:url" content="https://chummersone.github.io/qformat.html" />
         <meta property="og:locale" content="en_GB" />
-        <meta property="og:description" content="Convert between floating-point and Qm.n fixed-point values">
+        <meta property="og:description" content="Convert between floating-point and Qm.n fixed-point values. Perform arithmetic operations on fixed-point values.">
         <meta property="og:site_name" content="chummersone.github.io" />
         <meta property="og:type" content="website" />
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
