Fixed some error in HTML

--- a/qformat.html
+++ b/qformat.html
@@ -47,13 +47,11 @@
     <body>
         <h1>Q-format Converter &amp; Calculator</h1>
 
-        <p>
-            <ul>
-                <li>Convert between floating-point values and their <em>Qm.n</em> fixed-point integer representations,
-                    and calculate the representation error.</li>
-                <li>Perform arithmetic operations on fixed-point values.</li>
-            </ul>
-        </p>
+        <ul>
+            <li>Convert between floating-point values and their <em>Qm.n</em> fixed-point integer representations,
+                and calculate the representation error.</li>
+            <li>Perform arithmetic operations on fixed-point values.</li>
+        </ul>
 
         <div id="container">
             <div id="tabs">
@@ -361,7 +359,7 @@
                                 ---><div class="col w75">
                                     <select id="arithmetic_out_num_bits">
                                         <option value="16">16</option>
-                                        <option value="24" selected>24</option>
+                                        <option value="24">24</option>
                                         <option value="32">32</option>
                                         <option value="40">40</option>
                                         <option value="48" selected>48</option>
